--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,20 @@
       </div>
 
       <div class="row" id="buttons">
-        <button type="button" class="btn btn-light col-4 ml-2" id="cartaRandom">
+        <button
+          type="button"
+          class="btn btn-light col-4 ml-2"
+          id="cartaRandom"
+          onclick="randomClick"
+        >
           Random
         </button>
-        <button type="button" class="btn btn-light col-4 ml-2" id="reset">
+        <button
+          type="button"
+          class="btn btn-light col-4 ml-2"
+          id="reset"
+          onclick="resetBaraja"
+        >
           Reset
         </button>
       </div>
