--- a/src/index.html
+++ b/src/index.html
@@ -15,28 +15,9 @@
   <body>
     <div class="container text-center">
       <div class="carta">
-        <div class="cartaTop"><p class="suit">♦</p></div>
-        <div class="cartaNum">5</div>
-        <div class="cartaBottom"><p class="suit">♦</p></div>
-      </div>
-
-      <div class="row" id="buttons">
-        <button
-          type="button"
-          class="btn btn-light col-4 ml-2"
-          id="cartaRandom"
-          onclick="randomClick"
-        >
-          Random
-        </button>
-        <button
-          type="button"
-          class="btn btn-light col-4 ml-2"
-          id="reset"
-          onclick="resetBaraja"
-        >
-          Reset
-        </button>
+        <div class="cartaTop"><p class="suit"></p></div>
+        <div class="cartaNum"></div>
+        <div class="cartaBottom"><p class="suit"></p></div>
       </div>
     </div>
 
